--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "esModuleInterop": true,
     "allowJs": true,
     "skipLibCheck": true,
+    "types": [
+      "vite/client"
+    ],
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./",
     "paths": {
