--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
     },
     "type": "module",
     "dependencies": {
-        "@inertiajs/vue3": "^2.0.3"
+        "@inertiajs/vue3": "^2.0.3",
+        "@tailwindcss/vite": "^4.0.5",
+        "@vueuse/core": "^12.5.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.475.0",
+        "radix-vue": "^1.9.13",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7",
+        "vue": "^3.5.13"
     }
 }
