--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@types/node": "^22.13.1",
+        "@types/vue-router": "^2.0.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vue/runtime-core": "^3.5.13",
         "autoprefixer": "^10.4.20",
@@ -29,6 +30,7 @@
         "radix-vue": "^1.9.13",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-router": "4"
     }
 }
